Set viewport stuff for retina screens

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Beta Corp - Custom crafted software" property="og:title"/>
     <meta content="images/beta-corp.png" property="og:image"/>
     <meta content="Beta Corp" property="og:site_name"/>
