--- a/panopta.html
+++ b/panopta.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
     
-    <title>Betacorp</title>
+    <title>Beta Corp</title>
 	
     <meta name="author" content="">
     <meta name="keywords" content="">
