--- a/panopta.html
+++ b/panopta.html
@@ -212,7 +212,7 @@
                     </div>
                     <div class="block-info">
                         <h5>Praktisch</h5>
-                        <p>Zowel uw toeleveranciers als u klanten kunnnen samenwerken in Panopta, waardoor Panopta bij het aannmaken van een nieuwe case grote delenn van de informatie voor u kan invullen.</p>
+                        <p>Zowel uw toeleveranciers als uw klanten kunnen samenwerken in Panopta, waardoor Panopta bij het aanmaken van een nieuwe case grote delenn van de informatie voor u kan invullen.</p>
                     </div>
                 </div><!-- service Ends -->
 
