--- a/secuform.html
+++ b/secuform.html
@@ -149,7 +149,7 @@
                 <div class="section-description">
                     <p>Voor zorginstellingen die een laagdrempelig inschrijf formulier op hun website willen, is SecuForm een webapplicatie die dit veilig en eenvoudig mogelijk maakt.
                     In tegenstelling tot een email formulier, sturen wij de clientgegevens direct door naar Ons Administratie van <a href="http://www.nedap-healthcare.com">Nedap Healthcare</a>. Dit voorkomt dubbel werk en zorgt ervoor dat er geen clientgevens in de email terecht komen.
-                    Ook bied het mogelijkheden tot het aanbieden van een up-to-date inschrijf formulier wat de client direct kan invullen, zonder tussenkomst van de clientadministratie.
+                    Ook biedt het mogelijkheden tot het aanbieden van een up-to-date inschrijf formulier wat de client direct kan invullen, zonder tussenkomst van de clientadministratie.
                     </p>
                     <p>Bent u geinteresseerd? Neem dan <a href="index.html#CONTACT">contact</a> met ons op en vraag naar de mogelijkheden voor uw bedrijf.</p>
                 </div><!-- description ends -->
