--- a/panopta.html
+++ b/panopta.html
@@ -147,7 +147,7 @@
                     <h2><span>PANOPTA</span></h2>
                 </div><!-- title ends -->
                 <div class="section-description">
-                    <p>Voor zorginstellingen die een praktische oplossing zoeken mbt de nieuwe privacy wetgevinging is Panopta een webapplicatie die helpt informatie incidenten te managen. In plaats van een papieren winkel op te tuigen zorgt ons product dat het hele process eenvoudig, snel en correct wordt afgehandeld.</p>
+                    <p>Voor bedrijven die een praktische oplossing zoeken mbt de nieuwe privacy wetgevinging is Panopta een webapplicatie die helpt informatie incidenten te managen. In plaats van een papieren winkel op te tuigen zorgt ons product dat het hele process eenvoudig, snel en correct wordt afgehandeld.</p>
                     <p>Op dit moment zijn wij druk bezig met de ontwikkeling van Panopta. Zo draaien wij op dit moment pilots met bedrijven die software leveren, alsmede bedrijven die software gebruiken. Wilt u op de hoogte gehouden worden van de ontwikkelingen? Schrijf u dan hieronder in voor de nieuwsbrief.</p>
                 </div><!-- description ends -->
             </div>
