--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Beta Corp</title>
+    <title>Beta Corp.</title>
 
     <meta name="author" content="">
     <meta name="keywords" content="">
@@ -579,7 +579,7 @@ Bekende klanten van ons zijn ABN Amro, Mijndomein, Nedap, NPO en Ericsson. Doord
                     <input type="text" name="name" placeholder="Naam">
                     <input type="text" name="_replyto" placeholder="E-mailadres">
                     <textarea name="message" placeholder="Bericht"></textarea>
-                    <button type="submit">Send</button>
+                    <button type="submit">Versturen</button>
                     <input type="hidden" name="_subject" value="Reactie van www.betacorp.nl" />
                     <input type="text" name="_gotcha" style="display:none" />
                     <!--<input type="hidden" name="_next" value="//site.io/thanks.html" />-->
