fix merge conflicts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- Theme Styles CSS File -->
     <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
+    <!-- Custom Styles CSS File -->
+    <link rel="stylesheet" type="text/css" href="custom.css" media="all" />
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMontserrat:400,700%7CRoboto+Slab:400%7CRoboto:900,700" rel="stylesheet" type="text/css" />
 
