Second pass over the Maintenance text

--- a/rails_maintenance_en.html
+++ b/rails_maintenance_en.html
@@ -49,8 +49,8 @@
 <section class="section section--dark">
   <div class="container">
     <div class="row color-text-on-dark">
+      <!-- sales text goes here -->
       <div class="col-md-12">
-        <!-- sales text goes here -->
         <h1>Ruby on Rails Maintenance Service</h1>
       </div>
       <div class="col-md-3">
@@ -83,15 +83,14 @@
           doing the work required to keep your app happily purring along.
         </p>
         <p>We offer our Ruby on Rails Maintenance Service for companies with <em>existing</em> Ruby on Rails
-          applications that need to be maintained by professional Rails developers.
-          We can even update your app a from time to time as you need. The best match for your service are applications
+          applications that need to be maintained by <em>professional</em> Ruby on Rails developers.
+          We can even update your app from time to time. The best match for our service are applications
           that are in <strong>active use</strong> and have <strong>business value</strong> for your company.
         </p>
-        <p>
-          If your application has no business value, then honestly ask yourself why you are not just shutting it down?
+        <p> If your application has no business value, then honestly ask yourself why you are not just shutting it
+          down?
         </p>
-        <p>Still here? Great! Your app has business value, so we can to help you maintain it.
-        </p>
+        <p>Still here? Great! Your app has business value and we can help you maintain it.</p>
       </div>
       <div class="col-md-12">
         <h2 id="the-service">Our Services</h2>
@@ -133,8 +132,8 @@
           <li>Monitor application performance, improve it when needed and scale servers <em>before</em> you outgrow them
             due to organic growth
           </li>
-          <li>Keep the code libraries used by your application up-to-date, so future development will be
-            easier/cheaper
+          <li>Keep the code libraries used by your application up-to-date to benefit from bug fixes and performance
+            updates, and to make future development easier and cheaper
           </li>
         </ul>
         <p>If you're not keeping up, you're lagging behind. This applies to your application's features in a competitive
@@ -184,11 +183,11 @@
         </p>
 
         <h3 id="baseline-service">Baseline Level of Service: what you always get</h3>
-        <p>This is included as the <em>baseline</em> level of service for all of our clients, regardless of what plan
-          they are on.
+        <p>This is included as the <em>baseline</em> level of service for all of our clients. It is <strong>Proper
+          Hosting</strong> with a little bit of maintenance.
         </p>
         <ul>
-          <li>Server hosting and pro-active server scaling (small to medium workloads)</li>
+          <li>Server hosting, backups and pro-active server scaling (small to medium workloads)</li>
           <li>Pro-active security updates</li>
           <li>Pro-active bug fixes</li>
           <li>Uptime and performance monitoring</li>
@@ -198,21 +197,22 @@
       </div>
       <div class="col-md-4">
         <h3>Proper Hosting</h3>
-        <p>This plan is great for low demand apps that are stable, good quality and not under active development.</p>
+        <p>This plan is great for low demand apps that are stable, good quality and <em>not</em> under active
+          development.
+        </p>
         <ul>
           <li>
             <a href="#baseline-service">Baseline</a>
             level of service is included
           </li>
+          <li>Just enough maintenance to keep your app up-to-date</li>
           <li>No enhancements and feature development</li>
-          <li>A little bit of TLC to keep your app up-to-date</li>
-          <li>1.25 day per month of total attention</li>
           <li>Breakdown: 0% dev, 100% maintenance</li>
         </ul>
         <p>€700 per month<br/> Availability: good.</p>
       </div>
       <div class="col-md-4">
-        <h3>Basic Maintenance</h3>
+        <h3>Proper Maintenance</h3>
         <p>This is great for small apps that need a little bit of love so they can slowly grow along with your
           business.
         </p>
@@ -221,9 +221,8 @@
             <a href="#baseline-service">Baseline</a>
             level of service is included
           </li>
+          <li>Enough maintenance to (slowly) make your app better over time</li>
           <li>Small non-urgent enhancements and feature development (2 days per month)</li>
-          <li>Enough TLC to keep your app up-to-date and (slowly) make it better over time</li>
-          <li>5 days per month of total attention</li>
           <li>Breakdown: 40% dev, 60% maintenance</li>
         </ul>
         <p>€2,600 per month<br/> Availability: good.</p>
@@ -237,10 +236,9 @@
             <a href="#baseline-service">Baseline</a>
             level of service is included
           </li>
+          <li>More maintenance to make your app better over time</li>
           <li>Small non-urgent enhancements and feature development (4 days per month)</li>
-          <li>More TLC to keep your app up-to-date and make it better over time</li>
-          <li>8.5 days per month of total attention</li>
-          <li>Breakdown: 47% dev, 53% maintenance</li>
+          <li>Breakdown: 50% dev, 50% maintenance</li>
         </ul>
         <p>€4,400 per month<br/> Availability: we can handle a few more apps.</p>
       </div>
@@ -257,7 +255,8 @@
           <a href="#contact">Get in touch</a>
           and we will see what your needs are and how we can help you. It is likely that you will end up
           with one of the above plans to cover the basics, and an additional contract to cover major feature
-          development.
+          development. Whether this will be fixed fee or simply a monthly retainer depends on your needs and
+          preferences.
         </p>
       </div>
       <div class="col-md-12">
@@ -266,9 +265,11 @@
           rates.
         </p>
         <ul>
-          <li><strong>High workload server hosting</strong>. When your needs are larger or more complicated that a small
-            to medium sized application requires, we <em>can</em> accommodate you. Just reach out, explain your needs or
-            share your server load / traffic stats, and we will help you find the best server setup.
+          <li><strong>High workload server hosting</strong>. When your needs are larger or more complicated than a small
+            to medium sized application requires, we <em>can</em> accommodate you.
+            Just
+            <a href="#contact">contact us</a>
+            and explain your needs, and we will help you find the best server setup.
           </li>
           <li><strong>Microservices</strong>. Let's talk and see how we can treat those as one or a few services instead
             of a lot of services. Good microservices tend to be smaller, better tested and easier to maintain. Bad
@@ -278,13 +279,16 @@
             business hours):
             contact us to make your case. 99% uptime is easy. 99.9% uptime usually happens without effort as wel. Going
             above this requires serious effort, which requires serious money. It is usually not worth it unless your app
-            generates more than € 1,000,000 per year. Those kinds of apps require a dedicated development team, not
-            simply a maintenance plan.
+            generates more than € 1,000,000 per year in revenue. Those kinds of apps require a dedicated development
+            team, not
+            simply a maintenance plan. Of course we can help you with this as well, but it will not be on a standard
+            plan.
           </li>
           <li><strong>Urgent enhancements</strong>. €1,000/day. Yes, this is intentionally high in order to discourage
             them. On rare occasions you might have a <em>real</em> emergency, for which we <em>are</em> willing to drop
             everything and help you
-            right now. A side effect is that it disrupts our planning, raises stress levels and is not good to do very
+            right now. A side effect of this is that it disrupts our planning, raises stress levels and is not good to
+            do very
             often.<br/>
             Unfortunately a lot of "urgent" enhancement requests are the result of clients not properly planning or
             communicating their timeline with us, so they expect us to fix their problem. We hope that this high price
@@ -296,63 +300,56 @@
         <p>Before we can get started, we would prefer to have a quick (video/phone/skype) chat with you about your
           application, your business and how it all fits together. How important is the app, who are the primary
           users (is it mostly internal to the company or is it customer/user-facing?) and roughly how heavy is the
-          usage? What plans and expectations do you have for the application? Do you want to keep adding features or
+          usage? What plans and expectations do you have for the application? Do you want to keep adding features on
           a regular basis, or is the app mostly done and do you simply want to keep it up and running?
         </p>
         <p>Next, once we decide that there's a fit and we can work together, we'll need to get access to the
-          application's source code (preferrably with the code commit history of your previous developers for
-          historic context), to your old servers (to observe how it was configured and make the transition smoother)
-          and/or to an export of your database (as a last resort).
+          application's source code (preferrably with the code commit history of your previous developers for historic
+          context), to your old servers (to observe how it was configured and make the transition smoother) and/or to an
+          export of your database (as a last resort). Knowing about extra services that are used such as Redis,
+          Memcached, Resque, Sidekiq or ElasticSearch would be helpful as well.
         </p>
-        <p>Really: the more information we can get, the better. If you have technical details to share or
-          documentation of any kind, we'd love to hear about this or read it. If not, we'll have to rely on our
-          experience and hints scattered in the code to piece together what your application was supposed to do.
-          That might lead to a rocky start.
+        <p>Really: the more information we can get, the better. If you have technical details to share or documentation
+          of any kind, we'd love read this. If not, we'll have to rely on our experience and hints scattered in the code
+          to figure out what your application was supposed to do. That might lead to a rocky start.
         </p>
         <p>Based on the size of the database and your indicated volume of traffic we'll try to estimate how large the
-          server needs
-          to be to host your application. We can then proceed to set it up and get your application up and running.
+          server needs to be to host your application. We can then proceed to set it up and get your application up and
+          running.
         </p>
         <p>If you own your own domain name and control your DNS Server, we can provide you with an IP address for the
           new server once that's setup. If you want us to handle DNS for you, we'll need to arrange for a transfer.
           If any of this is confusing, no worries: we'll help you.
         </p>
         <p>Besides getting your application up and running on our server, we'd be curious if your application has
-          automated tests of any sort. These are sort of a "proof" of how your application is <em>supposed</em> to
-          work, which we need to rely on when errors or bugs occur and we need to fix them, or to check that we don't
-          break your app when we perform updates or if you request changes in the future.
+          automated test code of any sort. These are sort of a "proof" of how your application is <em>supposed</em> to
+          work, which we need to rely on when errors or bugs occur and we want to fix them, or to check that we don't
+          break your app when we perform updates or if you request changes in the future. An app without tests is a
+          <em>scary</em> app to maintain.
         </p>
         <p>For the entire onboarding experience we expect to spend at least a day. We'll take that from the (feature
-          development) time budget of your first month.
+          development) time budget of your first month so it won't cost you extra.
         </p>
         <p>In summary, a checklist of things to prepare for onboarding:</p>
         <ul>
-          <li>Do you have access to the source code? We prefer a full checkout of the version control system of your
-            previous developer (git, svn or someting else) but if things get really dire we might be able to scrape
-            this from your server if we can get a login there.
+          <li>Can you get us access to the source code of the app?</li>
+          <li>Can you get us access to your server(s) and/or databases?</li>
+          <li>How is your DNS or domain name setup? If you manage it yourself, great! If your previous developer did,
+            then we'll need to transition this.
           </li>
-          <li>Do you have access to your server(s) and/or database? Any kind of ssh login here would be really
-            helpful in transitioning your server from their servers to ours.
+          <li>How are you using the application? Is it mostly for internal or external use? How many users are there?
+            How much traffic
+            goes through it? Rough estimates are fine.
           </li>
-          <li>How is your DNS or domain name setup? If you manage it yourself, great! If your previous developer
-            did, then we'll need to transition this. Related question: how is your email setup? If your old
-            developer hosted this themselves as well, you'll probably need to migrate this to a dedicated email
-            provider. Google G Suite, Microsoft Office 365 and FastMail are all equally good options. We can help if
-            you can't come to a solution with your previous provider.
-          </li>
-          <li>How are you using the application? Is it internal/external? How many users are there, how much traffic
-            goes through it? Rough estimates are fine. It is useful to know if we are dealing with a hundred or a
-            million users. The same goes for the size of your database: does it contain just a few thousand items or
-            does it contain ten years of history for a million customers?
-          </li>
+          <li>Do you know if there are automated code tests?</li>
+          <li>Do you know which external services were used? Services to send e-mail, to host your images, etc.</li>
         </ul>
-        <p>As said before, we prefer to get as much info as needed, but if you can't get all of it then don't worry
+        <p>As said before, it helps to get as much info as possible, but if you can't get all of it then don't worry
           too much either. We'll figure it out together.
         </p>
         <p>We hope to talk to you soon!</p>
-        <!-- end of sales text -->
-
       </div>
+      <!-- end of sales text -->
     </div>
   </div>
 </section>
@@ -378,7 +375,7 @@
               <select id="contact-plan" name="plan">
                 <option value="-">No plan / general question</option>
                 <option value="proper_hosting">Proper Hosting (€700 / month)</option>
-                <option value="basic_maintenance">Basic Maintenance (€2,600 / month)</option>
+                <option value="proper_maintenance">Proper Maintenance (€2,600 / month)</option>
                 <option value="incremental_improvement">Incremental Improvement (€4,400 / month)</option>
                 <option value="major_feature_development">Major Feature Development (custom plan)</option>
               </select>
