HTTPS for Formspree

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <form action="http://formspree.io/info@betacorp.nl" class="contact" method="POST"><input
+            <form action="https://formspree.io/info@betacorp.nl" class="contact" method="POST"><input
                 class="textfield__input" name="name" placeholder="Uw naam" type="text"/>
               <div class="textfield textfield--email"><input class="textfield__input" name="_replyto"
                                                              placeholder="Uw email adres" type="email"/></div>
