--- a/rails_maintenance_en.html
+++ b/rails_maintenance_en.html
@@ -367,7 +367,7 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <form action="http://formspree.io/info@betacorp.nl" class="contact" method="POST">
+            <form action="https://formspree.io/sales@betacorp.nl" class="contact" method="POST">
               <input class="textfield__input" name="name" placeholder="Your name" type="text"/>
               <div class="textfield textfield--email">
                 <input class="textfield__input" name="_replyto" placeholder="Your email address" type="email"/></div>
