--- a/rails_maintenance.html
+++ b/rails_maintenance.html
@@ -368,7 +368,7 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <form action="http://formspree.io/info@betacorp.nl" class="contact" method="POST">
+            <form action="https://formspree.io/sales@betacorp.nl" class="contact" method="POST">
               <input class="textfield__input" name="name" placeholder="Uw naam" type="text"/>
               <div class="textfield textfield--email">
                 <input class="textfield__input" name="_replyto" placeholder="Uw email adres" type="email"/></div>
